--- a/style.css
+++ b/style.css
@@ -2,8 +2,12 @@
   margin: 0;
   padding: 0;
   font-family: "Orbitron", sans-serif;
+  font-weight: 600;
 }
-
+a {
+  text-decoration: none;
+  color: #474747;
+}
 nav {
   max-width: 100%;
   display: flex;
@@ -16,6 +20,10 @@ nav {
   margin-left: 100px;
   display: flex;
   align-items: center;
+}
+
+.Title-Nav-Span {
+  color: #ff42a5;
 }
 .Title-Nav img {
   margin-right: 20px;
@@ -34,10 +42,6 @@ nav {
 
 .List-Nav li {
   padding: 10px;
-}
-.List-Nav li a {
-  text-decoration: none;
-  color: #474747;
 }
 .Follow {
   border-radius: 8px;
@@ -151,7 +155,7 @@ nav {
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: 30px; /* 166.667% */
+  line-height: 30px;
 }
 
 .We-are-gamer button {
@@ -163,4 +167,296 @@ nav {
   border: none;
   color: #fff;
   background: var(--linear, linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%));
+}
+
+.Online-Games-Title {
+  text-align: center;
+  font-family: "Lobster", cursive;
+}
+
+.Online-Games-Title-1 {
+  font-family: "Lobster", cursive;
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.Online-Games-Images-Showcase {
+  width: 200px;
+  margin-right: 20px;
+  position: relative;
+  cursor: pointer;
+}
+.Online-Games-Images {
+  padding-top: 40px;
+  display: flex;
+  justify-content: center;
+  border-radius: 16px;
+  overflow: hidden;
+}
+
+.Online-Games-Images img {
+  display: flex;
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  border-radius: 16px;
+}
+
+.Image-Overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 78%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  border-radius: 16px;
+  border: 2px solid #ff42a5;
+}
+.Watch-Now-Container {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+}
+.Watch-Now-Icon {
+  width: 0px;
+  margin-bottom: 10px;
+}
+.Image-Overlay p {
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.Online-Games-Images-Showcase:hover .Image-Overlay {
+  opacity: 1;
+}
+
+.Play-Instantly {
+  display: flex;
+}
+
+.Play-Instantly-Title {
+  padding: 300px 0px 100px 0px;
+  text-align: center;
+}
+.Play-Instantly-Images {
+  padding-top: 40px;
+  display: flex;
+  justify-content: center;
+  border-radius: 16px;
+  overflow: hidden;
+  position: relative;
+}
+
+.Play-Instantly-Images-Container {
+  position: relative;
+}
+
+.Play-Instantly-Images-1 {
+  padding: 50px;
+}
+
+.Play-Instantly-Images-1 img {
+  width: 90%;
+}
+
+.Play-Instantly-Images-2 img {
+  width: 30%;
+  position: absolute;
+  bottom: 0;
+  right: 1;
+}
+
+.Games-Bar-1,
+.Games-Bar-2 {
+  padding-top: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.Games-Bar-1 img,
+.Games-Bar-2 img {
+  width: 13%;
+}
+
+.Games-Bar-1 a,
+.Games-Bar-2 a {
+  display: flex;
+  align-items: center;
+  font-size: 17px;
+  text-align: top;
+  border: 2px solid transparent;
+  padding: 5px 10px;
+}
+
+.Games-Bar-1 a img,
+.Games-Bar-2 a img {
+  margin-right: 20px;
+}
+
+.Games-Bar-1 a:hover,
+.Games-Bar-2 a:hover {
+  border-radius: 20px;
+  border: 2px solid #ff42a5;
+  color: #ff42a5;
+}
+
+footer {
+  color: white;
+  background: #0b0223;
+}
+.Footer-Title {
+  padding-top: 100px;
+  display: flex;
+  gap: 10px;
+  font-size: 30px;
+  justify-content: center;
+}
+
+.Footer-Tags {
+  padding-top: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.Footer-Icons {
+  padding-top: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.Last-Line {
+  padding-top: 50px;
+  text-align: center;
+  padding-bottom: 100px;
+}
+
+@media (max-width: 576px) {
+  html,
+  body {
+    overflow-x: hidden;
+  }
+  body {
+    font-size: 14px;
+  }
+
+  nav {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .Title-Nav,
+  .List-Nav {
+    margin: 10px;
+    text-align: center;
+  }
+  .Banner {
+    flex-direction: column;
+  }
+
+  .Banner-Images {
+    order: 2;
+  }
+  .Banner-Images img {
+    width: 100%;
+    max-width: 576px;
+  }
+  .Banner-Title {
+    order: 1;
+  }
+  .Banner-Title-1st {
+    font-size: 30px;
+  }
+
+  .Banner-Title-2nd {
+    font-size: 60px;
+  }
+
+  .Banner-Button-1st,
+  .Banner-Button-2nd {
+    font-size: 14px;
+  }
+
+  .We-are-gamer,
+  .Online-Games,
+  .Play-Instantly,
+  .Games-Bar {
+    flex-direction: column;
+  }
+
+  .We-are-gamer-text {
+    order: 1;
+    text-align: center;
+  }
+  .We-are-gamer-text h3 {
+    text-align: center;
+  }
+  .We-are-gamer-text p {
+    text-align: center;
+  }
+  .We-are-gamer-img img {
+    order: 2;
+    width: 100%;
+    max-width: 576px;
+  }
+  .Online-Games-Title {
+    font-size: 24px;
+  }
+
+  .Online-Games-Title-1 {
+    font-size: 20px;
+  }
+
+  .Online-Games-Images-Showcase {
+    margin-bottom: 20px;
+  }
+
+  .Online-Games img {
+    max-width: 100%;
+  }
+
+  .Play-Instantly-Title {
+    padding-top: 10px 0px;
+  }
+
+  .Play-Instantly-Images {
+    flex-direction: column;
+  }
+
+  .Play-Instantly-Images img {
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .Games-Bar-1,
+  .Games-Bar-2 {
+    flex-direction: column;
+  }
+
+  .Games-Bar-1 a,
+  .Games-Bar-2 a {
+    font-size: 14px;
+    text-align: center;
+  }
+
+  .Games-Bar-1 img,
+  .Games-Bar-2 img {
+    width: 10%;
+  }
 }
